<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="@dimen/dp_200"
    android:layout_height="@dimen/dp_100"
    android:gravity="center_horizontal"
    android:background="@drawable/layout_rounded">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_100"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="bottom"
            android:text="@string/widget_next_alarm_preview_time"
            android:textColor="#ffffff"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="start"
            android:text="@string/widget_next_alarm_preview_title"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_100"
        android:layout_marginEnd="@dimen/dp_10"
        android:src="@drawable/outline_alarm_24"
        android:tint="@color/white"
        tools:ignore="UseAppTint"
        android:contentDescription="@string/widget_next_alarm_icon_description" />

</LinearLayout>